# erpnext-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_stdio.py
src/: config.py  discovery.py  discovery_cache.py  erpnext_client.py  gateway.py  server.py
src/tools/: __init__.py  accounting.py  approvals.py  assets.py  buying.py  curated.py  documents.py  generic.py  hr.py  manufacturing.py  projects.py  selling.py  stock.py  utils.py
tests/: test_config.py  test_discovery.py  test_erpnext_client.py  test_gateway.py  test_http.py  test_server.py  test_stdio.py  test_tools.py
