[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erpnext-mcp-server"
version = "0.1.0"
description = "Standalone MCP server for ERPNext — auto-discovers DocTypes, serves 250+ tools over stdio or HTTP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
erpnext-mcp-server = "src.server:main"
